--- a/src/app/application-onboarding/data-source/data-source.component.html
+++ b/src/app/application-onboarding/data-source/data-source.component.html
@@ -49,7 +49,11 @@
                             <td>{{datasourceData.name}}</td>
                             <td>{{datasourceData.datasourceType}}</td>
                              <td>
-                              <a  class="text-muted ml-2"  data-toggle="modal" data-target="#dataSource" data-backdrop="static" data-keyboard="false" (click)="onselectDatasource('Edit',datasourceData,i)"><i class="fas fa-pencil-alt"></i></a>  
+                              <span data-toggle="tooltip" data-placement="top" data-original-title="Edit" (click)="onselectDatasource('Edit',datasourceData,i)">
+                                <a  class="text-muted ml-2"  data-toggle="modal" data-target="#dataSource" data-backdrop="static" data-keyboard="false">
+                                  <i class="fas fa-pencil-alt"></i>
+                                </a>
+                              </span>
                               <a (click)="onselectDatasource('Delete',datasourceData,i)" class="text-muted ml-2" data-toggle="tooltip"  data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
                             </td> 
                           </tr>
