--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -20,6 +20,7 @@
       </button>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" (click)="onLogout()">Logout</a>
+        <a class="dropdown-item" >{{versionDetails['default']['versionString']}}</a>
       </div>
     </div>
   </div>
