--- a/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
@@ -123,6 +123,13 @@
                      </div>
                    </div>
                 </div>
+                <div class="display-save-btn">
+                <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next pull-right">Next</button>
+                </div>
+                
+                <!-- <div class="display-save-btn">
+                  <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next pull-right">Next</button>
+                </div> -->
               </form>
             </mat-step>
             <mat-step [stepControl]="infraFormGroup">
@@ -248,10 +255,11 @@
                      </div>
                    </div>
                 </div>
-                <!-- <div>
+                <div class="display-save-btn">
                   <button mat-button matStepperPrevious>Back</button>
-                  <button mat-button matStepperNext>Next</button>
-                </div> -->
+                  <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next pull-right">Next</button>
+                  <br>
+                </div>
               </form>
             </mat-step>            
             <mat-step>
@@ -559,14 +567,16 @@
                    </div>
                  </div>
               </div>
-              <div>
+              <br>
+              <div class="display-save-btn">
                 <button mat-button matStepperPrevious>Back</button>
-                <button mat-button (click)="stepper.reset()">Reset</button>
+                <button mat-button class="btn btn-primary sw-btn-next pull-right" (click)="saveapminfra()">Save</button>
+                <br>
               </div>
             </mat-step>
           </mat-horizontal-stepper>         
           <div class="col-12">
-            <button class="btn btn-primary ml-2 savebtn" (click)="saveapminfra()">Save</button>
+            <!-- <button class="btn btn-primary ml-2 savebtn" (click)="saveapminfra()">Save</button> -->
           </div>
          </div>            
       </div>
