--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -480,7 +480,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content" style="min-width:1000px;">
       <div class="modal-header">
-        <h5 class="modal-title">New Log Template</h5>
+        <h5 class="modal-title">{{templateEditMode?'Edit Log Template':'New Log Template'}}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" #logModel>
           <i class="fa fa-times"></i>
         </button>
@@ -497,7 +497,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content" style="min-width:1000px;">
       <div class="modal-header">
-        <h5 class="modal-title">New Metric Template</h5>
+        <h5 class="modal-title">{{templateEditMode ? 'Edit Metric Template':'New Metric Template'}}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" #metricModel>
           <i class="fa fa-times"></i>
         </button>
