changed button bg from white to blue color

--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
@@ -211,7 +211,7 @@
                      </div>
                   </div>
                   <div>
-                    <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next pull-right" (click)="getLogTopics()">Next</button>
+                    <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next pull-right btn-color" (click)="getLogTopics()">Next</button>
                   </div>
                 </form>
               </mat-step>
@@ -295,8 +295,8 @@
                      </div>
                   </div>
                   <div>
-                    <button mat-button matStepperPrevious class="pull-left">Back</button>
-                    <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next pull-right">Next</button>
+                    <button mat-button matStepperPrevious class="pull-left btn-color ">Back</button>
+                    <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next pull-right btn-color">Next</button>
                   </div>
                 </form>
               </mat-step>
@@ -358,8 +358,8 @@
                     </div>
                   </div>
                   <div>
-                    <button mat-button matStepperPrevious class="pull-left btn btn-primary">Back</button>
-                    <button mat-button matStepperNext type="button" class="btn btn-primary sw-btn-next pull-right" (click)="SubmitForm()">Submit</button>
+                    <button mat-button matStepperPrevious class="pull-left btn btn-primary btn-color ">Back</button>
+                    <button mat-button matStepperNext type="button" class="btn btn-primary sw-btn-next pull-right btn-color " (click)="SubmitForm()">Submit</button>
                   </div>
                 </form>
               </mat-step>
