--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.less
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.less
@@ -28,3 +28,7 @@ overflow-y:auto;
 .disabledTab{
     pointer-events: none;
 }
+.btn-color {
+    background-color: #007bff !important;
+    color: #fff;
+}
