--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -1,5 +1,5 @@
 <div class="tab-content h-100 p-3 flex-grow-1">
-  <div *ngIf = "!apploading" class="tab-pane d-flex flex-column bg-white h-100 fade show active">
+  <div *ngIf = "!apploading && !apiLoadingError" class="tab-pane d-flex flex-column bg-white h-100 fade show active">
     <div class="page_access text-right py-2 px-3">
       <button class="btn btn-default ml-1" (click)="cancelForm()">Cancel</button>
       <!-- <button class="btn btn-default ml-2" disabled="disabled">Save</button> -->
@@ -180,7 +180,7 @@
                           <div class="form-group mb-3 pl-4 text-muted">
                             <label>Service Name</label>
                             <div class="d-flex  mr-4 align-items-center">
-                              <input type="text" class="form-control input_len" [readonly]="editMode" formControlName="serviceName" 
+                              <input type="text" class="form-control input_len" formControlName="serviceName" 
                               [ngClass]="servicesForm.get('services')['controls'][i].get('serviceName').invalid && servicesForm.get('services')['controls'][i].get('serviceName').touched ? 'is-invalid':''">
                               <a class="text-muted ml-3 formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete Service" 
                               (click)="deleteService(i)" *ngIf ="servicesForm.get('services')['controls'].length > 1 ? true : false">
@@ -472,6 +472,9 @@
   </div>
   <div *ngIf = "apploading" class="tab-pane d-flex flex-column bg-white h-100 fade show active">
     <app-loading-screen></app-loading-screen>
+  </div>
+  <div *ngIf = "!apploading && apiLoadingError" class="tab-pane d-flex flex-column bg-white h-100 fade show active">
+    <app-component-error-listing [errorString]="'We encountered an error and cannot fulfill the request.Try to refresh the page.'" class="apifailerror"></app-component-error-listing>
   </div>
 </div>
 
