--- a/src/app/application-onboarding/application/application-creation/application.component.less
+++ b/src/app/application-onboarding/application/application-creation/application.component.less
@@ -233,3 +233,6 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
 	color: #c1c1c1;
 	padding-left: 15px;
 }
+.apifailerror{
+	padding: 220px 0px;
+}
