Create Metric template reducer and related code changes

--- a/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
@@ -701,7 +701,7 @@
               
             
             <div class="col-12">
-              <button class="btn btn-primary ml-2 savebtn" (click)="savemetrictemplate()">SaveForm</button>
+              <button class="btn btn-primary ml-2 savebtn" (click)="savemetrictemplate()">Save</button>
             </div>
                         
           </div>
