--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
@@ -90,8 +90,7 @@
                                 class="invalid-feedback">
                                 <span *ngIf="createLogForm.get('namespace').errors['required']">Namespace is
                                   required</span>    
-                                <!-- <span *ngIf="createLogForm.get('namespace').errors['containSpace']">Space is not allowed in template name</span>
-                                <span *ngIf="createLogForm.get('namespace').errors['symbols']">No Special characters are allowed.</span> -->
+                       
                               </span>
                             </div>
                             <!-- / form group namespace -->
@@ -244,16 +243,7 @@
                                   <ng-container [formGroupName]="i">
                                    <td>
                                      <input type="text"  class="form-control" value="{{logTopics.string}}" formControlName="string" required>
-                                     <!-- 
-                                      [ngClass]="logTopicsForm.get('string').invalid && logTopicsForm.get('string').touched ? 'is-invalid':''" 
-                                      <span *ngIf="logTopicsForm.get('string').invalid && logTopicsForm.get('string').touched"
-                                     class="invalid-feedback">
-                                     <span *ngIf="logTopicsForm.get('string').errors['required']">String Name is
-                                       required</span>
-                                     <span *ngIf="logTopicsForm.get('string').errors['containSpace']">Space is not allowed in string name</span>
-                                     <span *ngIf="logTopicsForm.get('string').errors['startingFromNumber']">The string name must begin with a letter.</span>
-                                     <span *ngIf="logTopicsForm.get('string').errors['symbols']">No Special characters are allowed.</span>
-                                   </span> -->
+                          
                                    </td>
                                    <td width="200">
                                      <select class="form-control" formControlName="topic">
@@ -266,15 +256,7 @@
                                    </td>
                                    <td width="100">
                                     <input [readonly]="true" type="text" class="form-control" value="{{logTopics.type}}" formControlName="type" required>
-                                    <!-- <span *ngIf="logTopicsForm.get('type').invalid && logTopicsForm.get('type').touched"
-                                       [ngClass]="logTopicsForm.get('type').invalid && logTopicsForm.get('type').touched ? 'is-invalid':''"
-                                    class="invalid-feedback">
-                                    <span *ngIf="logTopicsForm.get('type').errors['required']">Type is
-                                      required</span>
-                                    <span *ngIf="logTopicsForm.get('type').errors['containSpace']">Space is not allowed in type name</span>
-                                    <span *ngIf="logTopicsForm.get('type').errors['startingFromNumber']">The type must begin with a letter.</span>
-                                    <span *ngIf="logTopicsForm.get('type').errors['symbols']">No Special characters are allowed.</span>
-                                  </span> -->
+                                  
                                    </td>
                                    <td width="36">
                                      <a (click)="deleteLogTopic(logTopics,i)" class="text-muted"><i class="fas fa-trash-alt"></i></a>
@@ -315,11 +297,11 @@
                         <div class="row">
                           <div class="form-group">
                             <div class="custom-control custom-checkbox">
-                              <input type="checkbox" class="custom-control-input"  id="clusterTagId"  (change)="onClusterChange($event)">
+                              <input type="checkbox" class="custom-control-input"  id="clusterTagId"  formControlName="clusterTagId"  (change)="onClusterChange($event.target.checked)">
                               <label class="custom-control-label text-muted" for="clusterTagId">Add Cluster Tag</label>
                             </div>
                           </div>
-                          <div *ngIf="clusterTagFlag === true"  class="col-12" style="height:150px; overflow-y:auto;" #scrollLogTags>
+                          <div *ngIf="logTopicsForm.value['clusterTagId'] === true"  class="col-12" style="height:150px; overflow-y:auto;" #scrollLogTags>
                             <table id="dtVerticalScrollExample"  class="table table-outline table-md" formArrayName="clusterList">
                               <thead>
                                 <tr>
@@ -330,21 +312,24 @@
                                 </tr>
                               </thead>
                               <tbody>
-                                <tr *ngFor="let clusterTags of logTopicsForm.get('clusterList')['controls'];let i=index;">
+                                <tr *ngFor="let clusterTags of logTopicsForm.get('clusterList')['controls'];let i=index;last as isLast">
                                  <ng-container [formGroupName]="i">
                                   <td>
                                     <input type="text"  class="form-control" value="{{clusterTags.string}}" formControlName="string" required>
                                   </td>
-                                  <td>
+                                  <td width="145">
                                     <select class="form-control" formControlName="tag">
                                      <option value="" [disabled]="true">Select</option>
                                      <option *ngFor="let clusterConfig of clusterTagConfig;let i=index" value="{{clusterConfig}}" required >
                                        {{clusterConfig}}</option>
                                   </select>
                                   </td>
-                                  <td>
+                                  <td width="20">
                                     <a (click)="deleteClusterTag(clusterTags,i)" class="text-muted"><i class="fas fa-trash-alt"></i></a>
                                   </td>
+                                  <td *ngIf="isLast" width="20" class="text-right">
+                                    <a (click)="addNewClusterTag()" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Cluster"><i class="fas fa-plus"></i></a>
+                                   </td>
                                   </ng-container>
                                 </tr>
                               </tbody>
