Log Analysis - Sensitivity change should enable rerun button, comment should intutitv to user

--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -142,19 +142,17 @@
                   alt="graph" /></div> -->
 
               <div class="dropdown error_dropdown">
-                <select (change)="changeCriticality($event,log)" [(ngModel)]="log.color"
-                  class="btn dropdown-toggle pb-0 pl-0 pr-2 pt-0 criticality-select"
+                <select (change)="changeCriticality($event,log)" [(ngModel)]="log.color" class="btn dropdown-toggle pb-0 pl-0 pr-2 pt-0 criticality-select"
                   [ngClass]="{'text-danger':log.color == 'dark red', 'text-error':log.color=='red','text-warning':log.color=='yellow','text-muted':log.color=='green'}">
-                  <option *ngFor='let criticality of criticalityList' [value]="criticality.criticalityColor"
-                    class="{{criticality.textclass}}">
+                  <option *ngFor='let criticality of criticalityList' [value]="criticality.criticalityColor" class="{{criticality.textclass}}">
                     {{criticality.displayValue}}
                   </option>
                 </select>
 
-                <i class="far fa-comment-alt ml-2 text-primary clickable" aria-hidden="true" id="criticalityComment"
-                  data-toggle="dropdown"></i>
-                <div class="dropdown-menu px-3 py-2 dropdown-shadow dropdown-reason dropdown-menu-right"
-                  aria-labelledby="criticalityComment">
+                <i class="far fa-comment-alt ml-2 text-primary clickable" [ngClass]="{'blink_me':log.id == selectedClusterInfo?.id && commentNotificationMessage!=''}" aria-hidden="true" id="criticalityComment" data-toggle="dropdown"></i>
+                <span class="badge badge-info comment-badge" *ngIf="log.id == selectedClusterInfo?.id" [innerHTML]='commentNotificationMessage'></span>
+                  
+                <div class="dropdown-menu px-3 py-2 dropdown-shadow dropdown-reason dropdown-menu-right" aria-labelledby="criticalityComment">
                   <div class="dropdown_header d-flex align-items-center justify-content-between mb-2">
                     <span>Reason for Reclassification</span>
                     <i class="fa text-muted fa-times"></i>
@@ -274,8 +272,8 @@
   </div>
 
   <div class="bottom_btns mt-auto bg-white position-sticky text-right">
-    <button class="btn mr-2" [ngClass]="{'btn-primary': classifiedLogsList.length > 0, 'btn-default':classifiedLogsList.length <= 0 }" data-toggle="tooltip" title="Clear the reclassification done by the user" (click)="reset()" [disabled]="classifiedLogsList.length <= 0">Reset</button>
-    <button class="btn mr-2" [ngClass]="{'btn-primary': classifiedLogsList.length > 0, 'btn-default':classifiedLogsList.length <= 0}" (click)="rerunLogs()" data-toggle="tooltip" title="Update and Rerun the canary with the updated classification from the user" [disabled]="classifiedLogsList.length <= 0">Re-run</button>
+    <button class="btn mr-2" [ngClass]="{'btn-primary': classifiedLogsList.length > 0 || sensitivityChanged, 'btn-default':classifiedLogsList.length <= 0 && !sensitivityChanged}" data-toggle="tooltip" title="Clear the reclassification done by the user" (click)="reset()" [disabled]="classifiedLogsList.length <= 0 && !sensitivityChanged">Reset</button>
+    <button class="btn mr-2" [ngClass]="{'btn-primary': classifiedLogsList.length > 0 || sensitivityChanged, 'btn-default':classifiedLogsList.length <= 0 && !sensitivityChanged}" (click)="rerunLogs()" data-toggle="tooltip" title="Update and Rerun the canary with the updated classification from the user" [disabled]="classifiedLogsList.length <= 0 && !sensitivityChanged">Re-run</button>
   </div>
 </div>
 <div class="table-responsive" *ngIf="!islogAnalysisAvailable">
