--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
@@ -79,3 +79,18 @@
 .removeOverflow{
     overflow: visible;
 }
+.comment-badge{
+    position: absolute;
+    top: -10px;
+    padding: 5px;
+    left: 122px;
+}
+.blink_me {
+    animation: blinker 1s linear infinite;
+  }
+  
+  @keyframes blinker {
+    50% {
+      opacity: 0;
+    }
+  }
