--- a/src/app/policy-management/policy-management.component.html
+++ b/src/app/policy-management/policy-management.component.html
@@ -104,7 +104,7 @@
                                                     <img src="../../../assets/images//blank-123.png" class="hr-image"
                                                       alt="blank" />
                                                     <p><strong>Create New {{currentTab | titlecase}} Policy</strong></p>
-                                                    <p>Non of Policy is exist in database. <br><small>(To create
+                                                    <p>None of Policy is exist in database. <br><small>(To create
                                                         Policy, click New Policy button present above)</small></p>
                                                   </div>
                                                   <!-- /.no_content -->
