--- a/src/app/audit/audit.component.less
+++ b/src/app/audit/audit.component.less
@@ -155,4 +155,6 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
 	.pagewait{
 		cursor: progress !important;
 	}
-	
+	.emptyTableError{
+		padding: 300px 0px;
+	}
